--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,7 +27,8 @@
     "react-dom": "^18.3.1",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.26.1",
-    "react-spinners": "^0.14.1"
+    "react-spinners": "^0.14.1",
+    "rsuite": "^5.71.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
