--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,7 +24,9 @@
     "react": "^18.3.1",
     "react-apexcharts": "^1.4.1",
     "react-big-calendar": "^1.13.4",
+    "react-datepicker": "^7.4.0",
     "react-dom": "^18.3.1",
+    "react-hook-form": "^7.53.0",
     "react-loading-skeleton": "^3.4.0",
     "react-router-dom": "^6.26.1",
     "react-spinners": "^0.14.1",
